--- a/_pgbackup/css/external_1625765593.css
+++ b/_pgbackup/css/external_1625765593.css
@@ -8792,6 +8792,7 @@ Copyright (c) 2015 Daniel Eden
     font-family: 'Mulish', sans-serif;
     color: #ffffff;
     font-weight: 700;
+    font-size: 15px;
     top: -17px;
 }
 
