--- a/_pgbackup/css/bootstrap.min_1625765764.css
+++ b/_pgbackup/css/bootstrap.min_1625765764.css
@@ -39,6 +39,8 @@
 ::before {
     box-sizing: border-box;
     padding-bottom: 1px;
+    z-index: auto;
+    margin-left: 0px;
 }
 
 html {
@@ -178,6 +180,7 @@ a {
     text-decoration: none;
     background-color: transparent;
     -webkit-text-decoration-skip: objects;
+    text-align: center;
 }
 
 a:hover {
@@ -220,7 +223,6 @@ figure {
 }
 
 img {
-    vertical-align: middle;
     border-style: none;
     z-index: 0;
 }
@@ -401,6 +403,7 @@ h1 {
 .h2,
 h2 {
     font-size: 2rem;
+    margin: auto;
 }
 
 .h3,
@@ -477,8 +480,8 @@ mark {
 }
 
 .list-inline {
-    padding-left: 0;
     list-style: none;
+    margin: auto;
 }
 
 .list-inline-item {
@@ -512,6 +515,7 @@ mark {
 .img-fluid {
     max-width: 100%;
     height: auto;
+    z-index: 0;
 }
 
 .img-thumbnail {
@@ -580,10 +584,10 @@ pre code {
 
 .container {
     width: 100%;
-    margin-right: auto;
-    margin-left: auto;
     padding-left: 15px;
     padding-right: 15px;
+    margin-left: auto;
+    margin-right: auto;
 }
 
 @media (min-width:576px){
@@ -606,8 +610,8 @@ pre code {
 
 @media (min-width:1200px){
     .container {
-        max-width: 1228px;
-        padding-left: 57px;
+        max-width: 1140px;
+        max-height: 542px;
     }
 }
 
@@ -714,6 +718,7 @@ pre code {
     min-height: 1px;
     padding-right: 15px;
     padding-left: 15px;
+    z-index: 2;
 }
 
 .col {
@@ -1005,7 +1010,6 @@ pre code {
     }
 
     .col-sm-12 {
-        float: left;
     }
 
     .order-sm-first {
@@ -1405,7 +1409,7 @@ pre code {
     .col-lg-8 {
         -ms-flex: 0 0 66.666667%;
         flex: 0 0 66.666667%;
-        max-width: 66.666667%;
+        width: 100%;
     }
 
     .col-lg-9 {
@@ -5839,6 +5843,9 @@ button.close {
 
 .modal-content {
     position: relative;
+    display: -ms-flexbox;
+    display: flex;
+    -ms-flex-direction: column;
     flex-direction: column;
     width: 50%;
     pointer-events: auto;
@@ -5847,8 +5854,6 @@ button.close {
     border: 1px solid rgba(0,0,0,.2);
     border-radius: .3rem;
     outline: 0;
-    display: flex;
-    z-index: 89;
 }
 
 .modal-backdrop {
@@ -6276,6 +6281,7 @@ button.close {
 
 .carousel {
     position: relative;
+    height: 100%;
 }
 
 .carousel-inner {
