--- a/css/style.css
+++ b/css/style.css
@@ -12994,3 +12994,9 @@ section .wave.wave4 {
         border-radius: 4px;
     }
 }
+
+@media screen and (max-width:413px) {
+    .spce2 {
+        height: 38px;
+    }
+}
