--- a/css/style.css
+++ b/css/style.css
@@ -12358,7 +12358,6 @@ align-content: {
     margin-bottom: 0;
     margin-left: 0px;
     top: -;
-
 }
 
 .blob2 {
@@ -12428,8 +12427,8 @@ align-content: {
 
 .class2 {
     z-index: -6;
-    margin: auto auto 365px;
     height: auto;
+    margin: 34px auto 348px;
 }
 
 .spce2 {
